# CAP

./: .gitignore  Cargo.toml  LANGUAGE.md  QUICKSTART.md  README.md  progress.md
src/: error.rs  main.rs
src/interpreter/: env.rs  mod.rs  value.rs
src/interpreter/stdlib/: arrow.rs  cluster.rs  core.rs  crypto.rs  csv.rs  df.rs  ffi.rs  fs.rs  image.rs  io.rs  json.rs  list.rs  llm.rs  mod.rs  net.rs  pdf.rs  plot.rs  server.rs  sklearn.rs  sql.rs  stream.rs  string.rs  sys.rs  task.rs  time.rs  torch.rs  vector.rs  wasm.rs  zip_archive.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs  pratt.rs
tests/: BUGS.md  debug_df.cap  functions.cap  hello.cap  oop.cap  pipelines.cap  test_aoc_1.cap  test_aoc_2.cap  test_args_count.cap  test_brace_parsing.cap  test_braces.cap  test_brainfuck.cap  test_calculator.cap  test_call_nonfn.cap  test_class.cap  test_class_inheritance.cap  test_coercion.cap  test_data_processing.cap  test_doc_core.cap  test_doc_crypto.cap  test_doc_data.cap  test_doc_img.cap  test_doc_io.cap  test_doc_llm.cap  test_doc_server.cap  test_doc_sklearn.cap  test_doc_sql.cap  test_doc_stream.cap  test_edge_cases.cap  test_game.cap  test_game_life.cap  test_if_else.cap  test_inclusions.cap  test_interactions.cap  test_io_edge.cap  test_json_stringify.cap  test_map_build.cap  test_map_keys.cap  test_map_keys_types.cap  test_match.cap  (+29 more)
