[package]
name = "cap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cap"
path = "src/main.rs"

[lib]
name = "cap"
path = "src/lib.rs"

[dependencies]
thiserror  = "1"
anyhow     = "1"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
rustyline  = "14"
indexmap   = "2"
regex      = "1"
csv        = "1"
chrono     = { version = "0.4", features = ["serde"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
toml       = "0.8"
serde_yaml = "0.9"
flate2     = "1"

[dev-dependencies]
insta = "1"
